# moiami_comments_service

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
instance/: test.db
src/: main.py
src/api/: comments.py  likes.py  swagger_defs.py
src/api/schemas/: comments.py  likes.py
src/core/: config.py  exceptions.py
src/models/: comment.py  like.py
src/services/: comments.py  likes.py  resource_client.py
tests/: comments.py  comments_idea.py  conftest.py  likes.py
tests/api/: comments_idea.py  test_comments_endpoints.py  test_likes_endpoints.py
tests/services/: conftest.py  test_comment_service.py  test_like_service.py
