[project]
name = "moiami-comments-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
